# dynamic-compass-heavy-hex

./: .gitignore  README.md  plot.py  pyproject.toml
config/: README.md  env.slurm  generate.slurm  generate_csv.slurm  merge.slurm  slurm_common.sh  submit.slurm
data/stats/: test
figures/manuscript/: README.md
scripts/: README.md
scripts/decoders/: run_belief_matching_decoder.py  run_mwpf_decoder.py
scripts/pipeline/: README.md  collect_stats.sh  generate_csv_sweep.sh  generate_error_rate_circuits.sh  generate_uniform.sh  prepare0_find_th.sh  prepare1_generate_th_plot_3d.sh  prepare2_generate_sweep_range.sh  step2_collect_stats_tesseract.sh
scripts/plot/: logical_error_rate.py  threshold_slice.py
scripts/visualization/: plot_logical_error_rate.py
src/decoder/: dem.py
src/heavyhex/: .__heavy_hex.py  _heavy_hex.py  _heavy_hex_betaH.py  _heavy_hex_old.py  _heavy_hex_test.py  gen_heavy_hex_circuits.py
src/utils/: __init__.py  diagram_util.py
tests/: test.py
tests/result/: check_matrix.txt  detector_error_model.txt  detector_error_model_tb1.txt  flags.txt
tools/: README.md  breaker_selector.py  check_th_range.py  combine_stats.py  count_thresholds.py  expand_sweep_points.py  find_common_thresholds.py  gen_circuits  generate_circuit.py  plot_threshold_slice.py  plot_threshold_surface_2d.py  plot_threshold_surface_3d.py  select_breakers_interactive.py  visualize_breaker_table.py
tools/threshold/: README.md  check_th_range.py  count_thresholds.py  expand_sweep_points.py  find_approx_thresholds.py  generate_initial_sweep_range.py  plot_threshold.py  (+3 more)
(+32 files in other folders)
