# contents of pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.force-include] 
"src/gen" = "gen"


[tool.hatch.build.targets.wheel]
packages = ["heavyhex"]
"src/heavyhex" = "heavyhex"

[project]
name = "heavyhex"
version = "0.1.0"

dependencies = [
  "matplotlib ~= 3.5",
  "numpy ~= 1.22",
  "scipy ~= 1.9",
  "pymatching ~= 2.1",
  "stim ~= 1.12.dev",
  "sinter ~= 1.12.dev",
  "pytest",
]