# contents of pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "heavyhex"
version = "0.1.0"
requires-python = "~=3.11"
dependencies = [
  "matplotlib ~= 3.5",
  "numpy ~= 1.22",
  "scipy ~= 1.9",
  "pymatching ~= 2.1",
  "stim ~= 1.12.dev",
  "sinter ~= 1.12.dev",
  "cairosvg",
]

[tool.hatch.build.targets.wheel]
packages = [
  "src/heavyhex",
  "src/gen",
  "src/utils",
]

[tool.hatch.build.targets.sdist]
include = [
  "src/**",
  "pyproject.toml",
  "README.md",
]

# Use this only for non-Python assets you want in the wheel
# (examples, .stim templates, README fragments, etc.)
# Remove if not needed.
# [tool.hatch.build.targets.wheel.force-include]
# "examples" = "examples"
# "data" = "data"

[tool.hatch.metadata]
allow-direct-references = true
